--- a/_sass/so-simple.scss
+++ b/_sass/so-simple.scss
@@ -20,6 +20,7 @@
 /* Components */
 @import "so-simple/global";
 @import "so-simple/page";
+@import "so-simple/pudi";
 @import "so-simple/author";
 @import "so-simple/entries";
 @import "so-simple/buttons";
