--- a/_sass/so-simple/_pudi.scss
+++ b/_sass/so-simple/_pudi.scss
@@ -14,17 +14,24 @@
 
   z-index: 1;
 
-  @include breakpoint($medium) {
-    margin-top: (-1.5 * $site-logo-height) / 2;
-  }
+  // @include breakpoint($medium) {
+  //   margin-top: (-1.5 * $site-logo-height) / 2;
+  // }
 
-  @include breakpoint($large) {
-    margin-top: (-2 * $site-logo-height) / 2;
-  }
+  // @include breakpoint($large) {
+  //   margin-top: (-2 * $site-logo-height) / 2;
+  // }
 
   img {
     display: block;
-    width: 30%;
+
+    @include breakpoint($medium) {
+      width: 60%;
+    }
+
+    @include breakpoint($large) {
+      width: 40%;
+    }
   }
 }
 
@@ -43,6 +50,14 @@
   padding: 0.5em;
   font-size: 16px;
   text-align: center;
-  width: 30%;
+
   max-width: 100%;
+
+  @include breakpoint($medium) {
+    width: 60%;
+  }
+
+  @include breakpoint($large) {
+    width: 40%;
+  }
 }
