--- a/_layouts/friend.html
+++ b/_layouts/friend.html
@@ -5,5 +5,5 @@ layout: page
 {{ content }}
 
 <div class="entries-{{ page.entries_layout | default: 'list' }}">
-  {% include recipes-friend.html taxonomy=page.taxonomy %}
+  {% include recipes.html taxonomy=page.taxonomy %}
 </div>
