--- a/_includes/page-author.html
+++ b/_includes/page-author.html
@@ -5,9 +5,11 @@ site.author -%} {%- assign author = site.data.authors[author] | default: author
 <div class="page-author h-card p-author">
   {%- if author.picture -%} {%- if author.picture contains "://" -%} {%- assign
   author_picture = author.picture -%} {%- else -%} {%- assign author_picture =
-  author.picture | relative_url -%} {%- endif -%}
+  author.picture | relative_url -%} {%- endif -%} {% assign friend_url =
+  "/rosies-recipes/friends/" | append: author.name | downcase | replace: " ",
+  "-" %}
 
-  <a href="/rosies-recipes/friends/chai">
+  <a href="{{ friend_url }}">
     <img
       src="{{ author_picture }}"
       class="author-avatar u-photo"
@@ -24,7 +26,7 @@ site.author -%} {%- assign author = site.data.authors[author] | default: author
         >{{ site.data.text[site.locale].by }}</em
       >
       {% endif %}<span class="p-name">
-        <a href="/rosies-recipes/friends/chai"> {{ author.name }} </a>
+        <a href="{{friend_url}}"> {{ author.name }} </a>
       </span>
     </div>
     {%- endif -%} {%- if author.links -%}
