--- a/_includes/page-author.html
+++ b/_includes/page-author.html
@@ -35,7 +35,7 @@ site.author -%} {%- assign author = site.data.authors[author] | default: author
       assign url = link.url -%} {%- else -%} {%- assign url = link.url |
       relative_url -%} {%- endif -%}
       <li class="author-link">
-        <a class="u-url" rel="me" href="{{ url }}"
+        <a class="u-url" rel="me" target="_blank" href="{{ url }}"
           ><i
             class="{{ link.icon | default : 'fas fa-link' }} fa-lg"
             title="{{ link.title }}"
