--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,7 +36,7 @@
   </script>
 
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}" />
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="/rosies-recipes/favicon.ico" type="image/x-icon" />
 
   <link
     rel="stylesheet"
