--- a/_layouts/friend.html
+++ b/_layouts/friend.html
@@ -5,8 +5,6 @@ layout: page
 {{ content }}
 
 
-
-
 <div class="author-info"></div>
     {%- if page.links -%}
     <span>Have a question?</span>
@@ -32,3 +30,6 @@ layout: page
 <div class="entries-{{ page.entries_layout | default: 'list' }}">
   {% include recipes.html taxonomy=page.taxonomy %}
 </div>
+
+
+{% include page-pagination.html %}
