--- a/_layouts/pudi.html
+++ b/_layouts/pudi.html
@@ -43,6 +43,12 @@ layout: default
         {% else %}
         <h1 id="page-title" class="page-title">{{ title }}</h1>
         {% endif %}
+        <div>
+          <img
+            style="margin-bottom: 1em"
+            src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | url_escape }}{{ page.url | uri_escape }}&count_bg=%23BFBFBF&title_bg=%23BFBFBF&title=Views&edge_flat=false"
+          />
+        </div>
       </header>
       <div class="page-content">
         {{ content }} {% assign recipes_count = 0 %} {%- for entry in
