--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
         <div>
           <img
             style="margin-bottom: 1em"
-            src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | url_escape }}{{ page.url | uri_escape }}&count_bg=%23BFBFBF&title_bg=%23BFBFBF&title=Views&edge_flat=false"
+            src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{ site.url | uri_escape }}{{ page.url | uri_escape }}&count_bg=%23BFBFBF&title_bg=%23BFBFBF&title=Views&edge_flat=false"
           />
         </div>
       </header>
